--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FireFront",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Modern front-end boilerplate using many cool features and technologies to aid in the development",
   "main": "gulpfile.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "autoprefixer-stylus": "^0.9.1",
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.0",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
